--- a/for_public/index.html
+++ b/for_public/index.html
@@ -44,7 +44,7 @@ $(function(){
             };
 
             // for Preventing Automatic Hyperlinking
-            //cleditor.cleanupHyperLink(tarFC);
+            cleditor.cleanupHyperLink(tarFC);
             
             // for disable Image Resizing
             cleditor.disableImgResizing(tarDoc);
